--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "beautifulsoup4>=4.12",
-    "pydantic>=1.10",
+    "pydantic>=2.0,<3.0",
     "pyyaml>=6.0",
     "playwright>=1.40",
 ]
