--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic>=2.0,<3.0",
     "pyyaml>=6.0",
     "playwright>=1.40",
+    "requests>=2.31",
 ]
 
 [project.optional-dependencies]
