--- a/.github/workflows/jira-sync.yml
+++ b/.github/workflows/jira-sync.yml
@@ -33,14 +33,14 @@ jobs:
           JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
           JIRA_PROJECT_KEY: ${{ secrets.JIRA_PROJECT_KEY }}
         run: |
-          python - <<'PY'
-import os
-required = ("JIRA_BASE_URL", "JIRA_EMAIL", "JIRA_API_TOKEN", "JIRA_PROJECT_KEY")
-missing = [name for name in required if not os.environ.get(name)]
-if missing:
-    raise SystemExit(f"Missing required Jira secrets: {', '.join(missing)}")
-print("All Jira secrets are configured.")
-PY
+          python << 'PY'
+          import os
+          required = ("JIRA_BASE_URL", "JIRA_EMAIL", "JIRA_API_TOKEN", "JIRA_PROJECT_KEY")
+          missing = [name for name in required if not os.environ.get(name)]
+          if missing:
+              raise SystemExit(f"Missing required Jira secrets: {', '.join(missing)}")
+          print("All Jira secrets are configured.")
+          PY
 
       - name: Sync DEV_PLAN tasks to Jira
         if: success()
