--- a/config.phase2.sample.yaml
+++ b/config.phase2.sample.yaml
@@ -17,3 +17,5 @@ browser:
   driver: playwright
   headless: false  # Keep visible for CAPTCHA solving
   slow_mo_ms: 250
+db:
+  url: postgresql+psycopg2://user:password@localhost:5432/cg_rera
