--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "pyyaml>=6.0",
     "playwright>=1.40",
     "requests>=2.31",
+    "SQLAlchemy>=2.0",
+    "psycopg2-binary>=2.9",
 ]
 
 [project.optional-dependencies]
