--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,13 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "beautifulsoup4>=4.12",
+    "fastapi>=0.110",
+    "httpx>=0.27",
     "pydantic>=2.0,<3.0",
     "pyyaml>=6.0",
     "playwright>=1.40",
     "requests>=2.31",
+    "uvicorn[standard]>=0.23",
     "SQLAlchemy>=2.0",
     "psycopg2-binary>=2.9",
 ]
