--- a/config.example.yaml
+++ b/config.example.yaml
@@ -20,5 +20,5 @@ browser:
   headless: false  # Set to false for easier manual CAPTCHA solving
   slow_mo_ms: 250
 db:
-  # Prefer setting this via the DATABASE_URL environment variable; this is a sample DSN for local development.
-  url: postgresql+psycopg2://user:password@localhost:5432/cg_rera
+  # Prefer overriding this via DATABASE_URL, but this default points to the unified Postgres instance.
+  url: postgresql://postgres:betsson%40123@localhost:5432/realmapdb
