--- a/config.phase2.sample.yaml
+++ b/config.phase2.sample.yaml
@@ -20,6 +20,9 @@ browser:
 search_page:
   url: "https://rera.cgstate.gov.in/Approved_project_List.aspx"  # Override if the portal URL changes
   selectors:
+    listing_table: "CSS_OR_XPATH_FOR_LISTING_TABLE"
+    row_selector: "CSS_OR_XPATH_FOR_LISTING_ROWS"
+    view_details_link: "CSS_OR_XPATH_FOR_VIEW_DETAILS"
     district: "CSS_OR_XPATH_FOR_DISTRICT"
     status: "CSS_OR_XPATH_FOR_STATUS"
     project_type: "CSS_OR_XPATH_FOR_PROJECT_TYPE"
