--- a/config.phase2.sample.yaml
+++ b/config.phase2.sample.yaml
@@ -20,13 +20,13 @@ browser:
 search_page:
   url: "https://rera.cgstate.gov.in/Approved_project_List.aspx"  # Override if the portal URL changes
   selectors:
-    listing_table: "CSS_OR_XPATH_FOR_LISTING_TABLE"
-    row_selector: "CSS_OR_XPATH_FOR_LISTING_ROWS"
-    view_details_link: "CSS_OR_XPATH_FOR_VIEW_DETAILS"
-    district: "CSS_OR_XPATH_FOR_DISTRICT"
-    status: "CSS_OR_XPATH_FOR_STATUS"
-    project_type: "CSS_OR_XPATH_FOR_PROJECT_TYPE"
-    submit_button: "CSS_OR_XPATH_FOR_SEARCH_BUTTON"
-    results_table: "CSS_OR_XPATH_FOR_RESULTS_TABLE"
+    listing_table: "#ContentPlaceHolder1_gvApprovedProject"
+    row_selector: "#ContentPlaceHolder1_gvApprovedProject > tbody > tr"
+    view_details_link: "a[title='View Details'], a.view-details"
+    district: "#ContentPlaceHolder1_ddlDistrict"
+    status: "#ContentPlaceHolder1_ddlProjectStatus"
+    project_type: "#ContentPlaceHolder1_ddlProjectType"
+    submit_button: "#ContentPlaceHolder1_btnSearch"
+    results_table: "#ContentPlaceHolder1_gvApprovedProject"
 db:
   url: postgresql://postgres:betsson%40123@localhost:5432/realmapdb
