Add various tools for database verification, cleanup, and QA testing
- Implemented `check_db_counts.py` for quick verification of row counts in key database tables.
- Created `cleanup_temp_files.py` to remove temporary, cache, and build artifacts with options for dry run and IDE configurations.
- Developed `dev_fresh_run_and_qa.py` for a one-shot developer smoke test combining a crawl and QA checks.
- Enhanced `init_db.py` to verify and list created tables after initializing the database schema.
- Updated `load_runs_to_db.py` to include verbose logging and improved error handling during the loading process.
- Added `system_full_check.py` to include a database data verification step in the system check process.
- Introduced `test_qa_helper.py` for an interactive QA testing workflow, allowing unit tests, smoke tests, and project comparisons.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,42 @@
+# Python bytecode and caches
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 *.egg-info/
+.eggs/
 .build/
+
+# Test caches
 .pytest_cache/
-.playwright/
+.mypy_cache/
+.ruff_cache/
+
+# Coverage reports
+.coverage
+htmlcov/
+
+# IDE and editor configs
+.idea/
+.vscode/
+*.swp
+*~
+*.tmp
+.DS_Store
+Thumbs.db
+
+# Environment
 .env
 .venv/
-.eggs/
-*.log
+venv/
+
+# Playwright
+.playwright/
+
+# Build artifacts and outputs
 outputs/
+runs/
+
+# Runtime logs
+*.log
+logs/
