Add UAT and integration tests for Floor Plan OCR feature
- Created UAT test report for Floor Plan OCR feature, covering database migration, ORM model definition, parser implementation, and CLI script verification.
- Implemented integration tests for imputation engine, ensuring it trains on seeded data and predicts missing values correctly.
- Developed unit tests for OCR parser, mocking dependencies and validating parsing logic with mock images.
- Established a comprehensive test suite to ensure production readiness of the Floor Plan OCR feature.

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,12 @@ alembic
 llama-cpp-python
 redis
 celery
+torch>=2.1.0 --index-url https://download.pytorch.org/whl/cu118
+transformers>=4.35.0
+accelerate>=0.24.0
+scikit-learn>=1.3.0
+pandas>=2.1.0
+opencv-python-headless>=4.8.0
+pypdf>=3.17.0
+sentence-transformers>=2.2.2
+surya-ocr>=0.4.0
